[project]
name = "doppler-specan"
version = "0.2.1"
description = "Live spectrum analyzer for doppler-dsp"
requires-python = ">=3.12"
dependencies = [
    "doppler-dsp>=0.2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "websockets>=12.0",
]

[project.urls]
Homepage      = "https://doppler-dsp.github.io/doppler/"
Repository    = "https://github.com/doppler-dsp/doppler"

[project.scripts]
doppler-specan = "doppler_specan.__main__:main"

[tool.uv.build-backend]
module-root = "."
module-name = "doppler_specan"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
