# OBJECT library — pure C core, no Python dependency.
add_library(async_dsss_receiver_core OBJECT async_dsss_receiver_core.c)
target_include_directories(
  async_dsss_receiver_core PUBLIC ${CMAKE_SOURCE_DIR}/native/inc
                            ${CMAKE_SOURCE_DIR}/native/inc/async_dsss_receiver)
target_link_libraries(async_dsss_receiver_core PUBLIC
    wfm_dsp_core
    gold_core
    snr_core
    acq_core
    corr2d_core
    fft2d_core
    fft_core
    detection_core
    carrier_acq_core
    dll_core
    loop_filter_core
    lockdet_core
    telemetry_core
    costas_core
    lo_core
    RateConverter_core
    resamp_core
    hbdecim_core
    cic_core
    fir_core
    resample_core
    mpsk_receiver_core
    carrier_nda_core
    boxcar_core
    agc_core
    symsync_core
    nco_core
    farrow_core
    psd_core
    spectral_core
    acc_trace_core
    detector_core
    corr_core)

add_executable(test_async_dsss_receiver_core
               ${CMAKE_SOURCE_DIR}/native/tests/test_async_dsss_receiver_core.c)
target_link_libraries(test_async_dsss_receiver_core
                      PRIVATE async_dsss_receiver_core wfm_dsp_core
    gold_core
    snr_core
    acq_core
    corr2d_core
    fft2d_core
    fft_core
    detection_core
    carrier_acq_core
    dll_core
    loop_filter_core
    lockdet_core
    telemetry_core
    costas_core
    lo_core
    RateConverter_core
    resamp_core
    hbdecim_core
    cic_core
    fir_core
    resample_core
    mpsk_receiver_core
    carrier_nda_core
    boxcar_core
    agc_core
    symsync_core
    nco_core
    farrow_core
    psd_core
    spectral_core
    acc_trace_core
    detector_core
    corr_core
    m)
target_include_directories(test_async_dsss_receiver_core
                           PRIVATE ${CMAKE_SOURCE_DIR}/native/inc)
add_test(NAME test_async_dsss_receiver_core COMMAND test_async_dsss_receiver_core)

add_executable(
  bench_async_dsss_receiver_core
  ${CMAKE_SOURCE_DIR}/native/benchmarks/bench_async_dsss_receiver_core.c)
target_link_libraries(bench_async_dsss_receiver_core
                      PRIVATE async_dsss_receiver_core wfm_dsp_core
    gold_core
    snr_core
    acq_core
    corr2d_core
    fft2d_core
    fft_core
    detection_core
    carrier_acq_core
    dll_core
    loop_filter_core
    lockdet_core
    telemetry_core
    costas_core
    lo_core
    RateConverter_core
    resamp_core
    hbdecim_core
    cic_core
    fir_core
    resample_core
    mpsk_receiver_core
    carrier_nda_core
    boxcar_core
    agc_core
    symsync_core
    nco_core
    farrow_core
    psd_core
    spectral_core
    acc_trace_core
    detector_core
    corr_core
    m)
target_include_directories(
  bench_async_dsss_receiver_core PRIVATE ${CMAKE_SOURCE_DIR}/native/inc
                                   ${CMAKE_SOURCE_DIR}/native/benchmarks)
